Main menu divider is available to select

--- a/modules/web/themes/halo/app/app-menu.scss
+++ b/modules/web/themes/halo/app/app-menu.scss
@@ -188,6 +188,7 @@ $cuba-menubar-submenu-item-font-weight: $v-font-weight !default;
     .v-menubar-separator {
       font-size: 0;
       display: table-row;
+      outline: none;
 
       span {
         box-sizing: content-box;
